# bio-rascal

./: .gitattributes  Cargo.toml  README.md  TODO.md
benches/: gff_bench.rs  seq_bench.rs
src/: fasta.rs  gff.rs  io.rs  lib.rs  samtools.rs  sequence.rs  snps.rs  taxon.rs
src/test-data/: test-fasta1.fa  test-line.gff  test-line2.gff  test-snps-line.vcf  test-snps.vcf
tests/: common.rs  test-taxon.rs
