[package]
name = "bio_rascal"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Rubino"]
license = "MIT OR Apache-2.0"
description = "A library for bioinformatics"
homepage = "https://github.com/frubino/bio-rascal"
repository = "https://github.com/frubino/bio-rascal"
keywords = ["lib", "bioinformatics", "gff", "snps", "fasta", "vcf", "pnps", "taxonomy"]
rust-version = "1.66"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
log = "0.4"
time = { version = "0.3", features = ["serde"] }

[profile.release]
#strip = true
#lto = true # link time optimisation, longer linking times
#codegen-units = 1 # increment reduction, ma parallel compilation

[dependencies.uuid]
version = "1.2"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

# Benchmark package
[dev-dependencies]
criterion = "0.3"
# Package code
[[bench]]
name = "gff_bench"
harness = false

[[bench]]
name = "seq_bench"
harness = false
